[package]
name = "gastap"
version = "0.0.1"
edition = "2021"

[dependencies]
fuel-core = { git = "https://github.com/fuellabs/fuel-core", branch = "chore/combined-db-readonly", features = ["rocksdb", "backup"] }
clap = {  version = "4.5.23" , features = ["derive"]}
anyhow = "1.0.95"
fuel-core-gas-price-service = "0.41.3"
