[package]
name = "gastap"
version = "0.0.1"
edition = "2021"

[dependencies]
fuel-core = { git = "https://github.com/FuelLabs/fuel-core", branch = "chore/combined-db-readonly", features = ["rocksdb", "backup"] }
clap = {  version = "4.5.28" , features = ["derive"]}
anyhow = "1.0.95"
fuel-core-gas-price-service = { git = "https://github.com/FuelLabs/fuel-core", branch = "chore/combined-db-readonly" }
